--- a/TravelLive/View/Detail/DetailViewCommentCell.xib
+++ b/TravelLive/View/Detail/DetailViewCommentCell.xib
@@ -9,21 +9,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="DetailViewCommentCell" customModule="TravelLive" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="39" id="KGk-i7-Jjw" customClass="DetailViewCommentCell" customModule="TravelLive" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4rp-8H-uLr">
-                        <rect key="frame" x="20" y="27" width="42" height="21"/>
+                        <rect key="frame" x="20" y="20" width="42" height="19"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRD-BC-c7N">
-                        <rect key="frame" x="82" y="27" width="41.5" height="21"/>
+                        <rect key="frame" x="82" y="20" width="41.5" height="19"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -31,11 +31,11 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="lRD-BC-c7N" firstAttribute="leading" secondItem="4rp-8H-uLr" secondAttribute="trailing" constant="20" id="03M-xe-xey"/>
-                    <constraint firstAttribute="bottom" secondItem="lRD-BC-c7N" secondAttribute="bottom" constant="27" id="6m6-bm-GGe"/>
-                    <constraint firstItem="lRD-BC-c7N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="27" id="CCd-wf-ncV"/>
+                    <constraint firstItem="lRD-BC-c7N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="CCd-wf-ncV"/>
                     <constraint firstItem="4rp-8H-uLr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="FX3-CN-cWV"/>
-                    <constraint firstItem="4rp-8H-uLr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="27" id="Khc-5y-Odz"/>
-                    <constraint firstAttribute="bottom" secondItem="4rp-8H-uLr" secondAttribute="bottom" constant="27" id="uA8-TS-In5"/>
+                    <constraint firstItem="4rp-8H-uLr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="Khc-5y-Odz"/>
+                    <constraint firstAttribute="bottom" secondItem="lRD-BC-c7N" secondAttribute="bottom" id="haP-JS-Omu"/>
+                    <constraint firstAttribute="bottom" secondItem="4rp-8H-uLr" secondAttribute="bottom" id="moE-Hw-LuQ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -43,7 +43,7 @@
                 <outlet property="commentLabel" destination="lRD-BC-c7N" id="bLG-ZV-biZ"/>
                 <outlet property="reviewerName" destination="4rp-8H-uLr" id="XVY-cX-S5n"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="132.92410714285714"/>
+            <point key="canvasLocation" x="61" y="94"/>
         </tableViewCell>
     </objects>
 </document>
