--- a/TravelLive/View/Detail/DetailViewImageCell.xib
+++ b/TravelLive/View/Detail/DetailViewImageCell.xib
@@ -13,7 +13,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="451" id="KGk-i7-Jjw" customClass="DetailViewImageCell" customModule="TravelLive" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="451"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="451"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -31,7 +31,7 @@
                             <constraint firstAttribute="width" secondItem="706-2I-Hxf" secondAttribute="height" multiplier="1:1" id="ehY-aq-bIy"/>
                         </constraints>
                     </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i4r-If-eMK">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="i4r-If-eMK">
                         <rect key="frame" x="0.0" y="74" width="320" height="320"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="320" id="9KX-Vj-fhq"/>
@@ -40,24 +40,41 @@
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sra-ti-o8l">
-                        <rect key="frame" x="290" y="10" width="20" height="31"/>
+                        <rect key="frame" x="280" y="10" width="20" height="46"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="Vmn-mZ-0eK"/>
                         </constraints>
                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="forward" catalog="system"/>
+                        <buttonConfiguration key="configuration" style="plain" image="option"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LBJ-ic-zyH">
-                        <rect key="frame" x="10" y="404" width="30" height="30"/>
+                        <rect key="frame" x="15" y="404" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="JXU-gz-Jsb"/>
-                            <constraint firstAttribute="width" constant="30" id="N9K-ni-gn5"/>
+                            <constraint firstAttribute="height" constant="40" id="JXU-gz-Jsb"/>
+                            <constraint firstAttribute="width" constant="40" id="N9K-ni-gn5"/>
                             <constraint firstAttribute="width" secondItem="LBJ-ic-zyH" secondAttribute="height" multiplier="1:1" id="U5P-nH-Bnq"/>
                         </constraints>
                         <color key="tintColor" systemColor="systemRedColor"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" image="suit.heart.fill" catalog="system" title=""/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zhW-ut-ZZH">
+                        <rect key="frame" x="60" y="409" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="6GB-fg-Mld"/>
+                            <constraint firstAttribute="height" constant="30" id="Mng-7N-78m"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" image="send" title=""/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJv-zd-liO">
+                        <rect key="frame" x="95" y="404" width="48" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="X4f-qj-pus"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" image="chat" title=""/>
                     </button>
                 </subviews>
                 <constraints>
@@ -66,16 +83,21 @@
                     <constraint firstItem="Sra-ti-o8l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="7Y0-29-5HF"/>
                     <constraint firstItem="i4r-If-eMK" firstAttribute="top" secondItem="706-2I-Hxf" secondAttribute="bottom" constant="20" id="8Xh-iJ-SNb"/>
                     <constraint firstItem="Bv2-nt-MHw" firstAttribute="leading" secondItem="706-2I-Hxf" secondAttribute="trailing" constant="10" id="9el-zN-aHO"/>
+                    <constraint firstItem="LBJ-ic-zyH" firstAttribute="centerY" secondItem="zhW-ut-ZZH" secondAttribute="centerY" id="9wo-gb-Kic"/>
                     <constraint firstItem="706-2I-Hxf" firstAttribute="centerY" secondItem="Bv2-nt-MHw" secondAttribute="centerY" id="EHe-yB-hBA"/>
                     <constraint firstAttribute="trailing" secondItem="i4r-If-eMK" secondAttribute="trailing" id="GWR-0I-mzG"/>
-                    <constraint firstItem="LBJ-ic-zyH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="IIq-oh-Vi8"/>
+                    <constraint firstItem="LBJ-ic-zyH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="IIq-oh-Vi8"/>
                     <constraint firstAttribute="bottom" secondItem="LBJ-ic-zyH" secondAttribute="bottom" id="KnV-xl-EYb"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Sra-ti-o8l" secondAttribute="trailing" constant="-6" id="MmQ-SO-TtY"/>
                     <constraint firstItem="706-2I-Hxf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Obi-3p-Ejj"/>
-                    <constraint firstAttribute="trailing" secondItem="Sra-ti-o8l" secondAttribute="trailing" constant="10" id="SUt-Qe-Khf"/>
+                    <constraint firstItem="zhW-ut-ZZH" firstAttribute="leading" secondItem="LBJ-ic-zyH" secondAttribute="trailing" constant="5" id="PJu-0x-DmX"/>
+                    <constraint firstAttribute="trailing" secondItem="Sra-ti-o8l" secondAttribute="trailing" constant="20" id="SUt-Qe-Khf"/>
+                    <constraint firstAttribute="bottom" secondItem="MJv-zd-liO" secondAttribute="bottom" id="avk-7A-IdD"/>
                     <constraint firstItem="i4r-If-eMK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="elY-Zw-XrM"/>
                     <constraint firstItem="i4r-If-eMK" firstAttribute="top" secondItem="Bv2-nt-MHw" secondAttribute="bottom" constant="31.5" id="hxf-3C-Avf"/>
                     <constraint firstItem="Bv2-nt-MHw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21.5" id="oT3-nY-kdW"/>
+                    <constraint firstItem="zhW-ut-ZZH" firstAttribute="centerY" secondItem="MJv-zd-liO" secondAttribute="centerY" id="ot3-sj-2LM"/>
+                    <constraint firstItem="MJv-zd-liO" firstAttribute="leading" secondItem="zhW-ut-ZZH" secondAttribute="trailing" constant="5" id="tRz-fz-ran"/>
+                    <constraint firstItem="MJv-zd-liO" firstAttribute="top" secondItem="i4r-If-eMK" secondAttribute="bottom" constant="10" id="vwH-wA-g3L"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -90,7 +112,9 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="forward" catalog="system" width="128" height="79"/>
+        <image name="chat" width="24" height="24"/>
+        <image name="option" width="32" height="32"/>
+        <image name="send" width="16" height="16"/>
         <image name="suit.heart.fill" catalog="system" width="128" height="109"/>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
