--- a/TravelLive/View/Detail/DetailViewCommentCell.xib
+++ b/TravelLive/View/Detail/DetailViewCommentCell.xib
@@ -9,21 +9,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="DetailViewCommentCell" customModule="TravelLive" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="44" id="KGk-i7-Jjw" customClass="DetailViewCommentCell" customModule="TravelLive" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="42"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4rp-8H-uLr">
-                        <rect key="frame" x="43" y="0.0" width="42" height="20.5"/>
+                        <rect key="frame" x="43" y="2" width="42" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRD-BC-c7N">
-                        <rect key="frame" x="95" y="6" width="41.5" height="20.5"/>
+                        <rect key="frame" x="100" y="3" width="41.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -36,22 +36,22 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niB-x0-k52">
-                        <rect key="frame" x="44" y="25.5" width="28.5" height="13.5"/>
+                        <rect key="frame" x="40" y="27.5" width="28.5" height="13.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="lRD-BC-c7N" firstAttribute="leading" secondItem="4rp-8H-uLr" secondAttribute="trailing" constant="10" id="03M-xe-xey"/>
+                    <constraint firstItem="lRD-BC-c7N" firstAttribute="leading" secondItem="4rp-8H-uLr" secondAttribute="trailing" constant="15" id="03M-xe-xey"/>
                     <constraint firstAttribute="bottom" secondItem="8Nu-yG-av0" secondAttribute="bottom" id="DhO-a7-5Mh"/>
                     <constraint firstItem="8Nu-yG-av0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="KDQ-Lq-AJn"/>
                     <constraint firstItem="niB-x0-k52" firstAttribute="top" secondItem="4rp-8H-uLr" secondAttribute="bottom" constant="5" id="KS4-nk-0lZ"/>
-                    <constraint firstAttribute="bottom" secondItem="niB-x0-k52" secondAttribute="bottom" constant="3" id="MHZ-oK-Rwn"/>
+                    <constraint firstAttribute="bottom" secondItem="niB-x0-k52" secondAttribute="bottom" constant="1" id="MHZ-oK-Rwn"/>
                     <constraint firstItem="4rp-8H-uLr" firstAttribute="leading" secondItem="8Nu-yG-av0" secondAttribute="trailing" constant="10" id="N4v-ot-3Ms"/>
-                    <constraint firstItem="niB-x0-k52" firstAttribute="leading" secondItem="8Nu-yG-av0" secondAttribute="trailing" constant="11" id="RhQ-Wt-QA1"/>
-                    <constraint firstItem="4rp-8H-uLr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="dRU-r3-eGH"/>
-                    <constraint firstItem="lRD-BC-c7N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="ddV-a3-trE"/>
+                    <constraint firstItem="niB-x0-k52" firstAttribute="leading" secondItem="8Nu-yG-av0" secondAttribute="trailing" constant="7" id="RhQ-Wt-QA1"/>
+                    <constraint firstItem="4rp-8H-uLr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="dRU-r3-eGH"/>
+                    <constraint firstItem="lRD-BC-c7N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="ddV-a3-trE"/>
                     <constraint firstItem="8Nu-yG-av0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="13" id="uVW-tQ-uJf"/>
                 </constraints>
             </tableViewCellContentView>
@@ -62,7 +62,7 @@
                 <outlet property="reviewerAvatarImage" destination="8Nu-yG-av0" id="e0c-DC-5Su"/>
                 <outlet property="reviewerName" destination="4rp-8H-uLr" id="XVY-cX-S5n"/>
             </connections>
-            <point key="canvasLocation" x="60.869565217391312" y="97.433035714285708"/>
+            <point key="canvasLocation" x="60.869565217391312" y="91.741071428571431"/>
         </tableViewCell>
     </objects>
 </document>
