--- a/TravelLive/View/Detail/DetailViewImageCell.xib
+++ b/TravelLive/View/Detail/DetailViewImageCell.xib
@@ -57,7 +57,7 @@
                         </constraints>
                         <color key="tintColor" systemColor="systemRedColor"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="plain" image="heart-1" title=""/>
+                        <buttonConfiguration key="configuration" style="plain" image="emptyHeart" title=""/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zhW-ut-ZZH">
                         <rect key="frame" x="60" y="409" width="30" height="30"/>
@@ -114,7 +114,7 @@
     </objects>
     <resources>
         <image name="chat" width="24" height="24"/>
-        <image name="heart-1" width="32" height="32"/>
+        <image name="emptyHeart" width="32" height="32"/>
         <image name="option" width="32" height="32"/>
         <image name="send" width="16" height="16"/>
         <systemColor name="systemRedColor">
